<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_connect"
		android:title="@string/menu_connect"
		android:showAsAction="always"/>
	<item android:id="@+id/menu_disconnect"
		android:title="@string/menu_disconnect"
		android:icon="@drawable/ic_delete"
		android:showAsAction="always"/>

	<item
		android:id="@+id/menu_options"
		android:showAsAction="always"
		android:title="@string/menu_options">
		<menu>
			<item android:id="@+id/menu_connection_retry"
				android:title="@string/menu_connection_retry"
				android:checkable="true"
				android:checked="true"
				android:showAsAction="always"/>
		</menu>
	</item>

	<item
		android:id="@+id/menu_commands"
		android:showAsAction="always"
		android:title="Commands"
		android:icon="@drawable/card_white2">
		<menu>
			<item android:id="@+id/menu_clear_display"
				android:title="@string/menu_clear_display"
				android:showAsAction="always" />

			<item android:id="@+id/menu_get_device_info"
				android:title="Device Info"
				android:showAsAction="always"/>

			<item android:id="@+id/menu_get_battery_level"
				android:title="Battery Level"
				android:showAsAction="always"/>

            <item android:id="@+id/menu_get_ksn"
                android:title="Get KSN"
                android:showAsAction="always"/>

            <item android:id="@+id/menu_clear_buffers"
                android:title="Clear Buffers"
                android:showAsAction="always"/>

            <item android:id="@+id/menu_set_msr_on"
				android:title="Set MSR On"
				android:showAsAction="always"/>

			<item android:id="@+id/menu_set_msr_off"
				android:title="Set MSR Off"
				android:showAsAction="always"/>

            <item
				android:id="@+id/menu_send"
				android:showAsAction="always"
				android:title="@string/menu_send">
			</item>
		</menu>
	</item>

	<item
		android:id="@+id/menu_emv"
		android:showAsAction="always"
		android:title="EMV"
		android:icon="@drawable/dip_card_white2">
		<menu>
			<item android:id="@+id/menu_start_transaction"
				android:title="@string/menu_start_transaction"
				android:showAsAction="always"/>
			<item android:id="@+id/menu_cancel_transaction"
				android:title="@string/menu_cancel_transaction"
				android:showAsAction="always"/>
			<item android:id="@+id/menu_emv_approved"
				android:title="@string/menu_emv_approved"
				android:checkable="true"
				android:checked="true"
				android:showAsAction="always"/>
			<item android:id="@+id/menu_emv_quickchip"
				android:title="@string/menu_emv_quickchip"
				android:checkable="true"
				android:checked="false"
				android:showAsAction="always"/>
			<item android:id="@+id/menu_emv_set_time"
				android:title="@string/menu_emv_set_time"
				android:showAsAction="always"/>
			<item android:id="@+id/menu_emv_configuration"
				android:title="@string/menu_emv_configuration">
				<menu>
					<item android:id="@+id/menu_emv_get_terminal_config"
						android:title="@string/menu_emv_get_terminal_config" />
					<item android:id="@+id/menu_emv_set_terminal_config"
						android:title="@string/menu_emv_set_terminal_config" />
					<item android:id="@+id/menu_emv_commit_config"
						android:title="@string/menu_emv_commit_config" />
				</menu>
			</item>
		</menu>
	</item>
</menu>
