<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_blue_dark" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_blue_dark" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/messageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/black"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/messageTextView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/black"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dataView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/data_values"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:clickable="false"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white">

                <requestFocus></requestFocus>
            </EditText>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>